NFC feature, layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="bonded_infopanel">Bonded :</string>
 
     <string name="found_devices">Found devices :</string>
+    <string name="preset">Add preset</string>
+
+
 </resources>
